--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,12 @@
     "ember": "~2.6.0-beta.2",
     "ember-cli-shims": "0.1.1",
     "ember-cli-test-loader": "0.2.2",
-    "ember-qunit-notifications": "0.1.0"
+    "mocha": "^2.5.3",
+    "chai": "~2.3.0",
+    "ember-mocha-adapter": "~0.3.1",
+    "KaTeX": "katex#^0.6.0"
+  },
+  "devDependencies": {
+    "url.js": "jillix/url.js#^2.4.0"
   }
 }
