--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "ember-cli": "2.6.0-beta.2",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-dependency-checker": "^1.2.0",
+    "ember-cli-deploy": "0.6.3",
+    "ember-cli-deploy-build": "0.1.1",
+    "ember-cli-deploy-ghpages": "0.2.0",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.4.0",
     "ember-cli-jshint": "^1.0.0",
