--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-katex",
-  "version": "0.0.0",
+  "version": "1.0.0-alpha.1",
   "description": "The default blueprint for ember-cli addons.",
   "directories": {
     "doc": "doc",
